--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,10 @@
     <title>N27-Bank</title>
 </head>
 <body>
-    Herzlich Wilkommen bei der N27 Bank</header> 
+    <h1>Herzlich Wilkommen bei der N27 Bank</h1></header> 
+  <div>
+      Konto-Angaben
+  </div>
 
     <p> 
     <button type="button">Kontostand anzeigen</button>
@@ -26,6 +29,16 @@
     <button type="button">Überweisung</button>
     </p>
 
-    <footer>Impressum</footer>
+    <img src="Logo.png" alt="Bank Logo" width="32" height="32">
+    <a href="https://github.com/mf154290/N27-154290" target="_blank">BKB</a>
+    <h1>Impressum</h1><footer>Persönliche-Angaben</footer>
+    <p>mf154290@students.berufskolleg-borken.de</p>
+    <p>Fabijan Misura</p>
+    <p>NRW</p>
+    <p>DE 46130381294799928442</p>
+    <p>Einzelunternehmen</p>
+    <p>Kundenservice Tel: 493824814</p>
+    
+
 </body>
 </html>
