--- a/Public/styles.css
+++ b/Public/styles.css
@@ -1,16 +1,18 @@
 body {
     font-family: Arial, Helvetica, sans-serif; 
-    color:red;
+    color: red;
     background-color: black ;
     font-size: large;
     background-image: url('Bank.jpg')
+    
     
 } 
 p {
     color: red;
     width: 400px;
     border: 5px solid blue;
-    
+
+
   }
   p {
     text-align: center; 
@@ -18,4 +20,12 @@ p {
     background-color: white;
     color: white;
     
+    
+}
+
+ul {
+
+  list-style: square inside url("icon.png");
+
+
 }
