--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,35 @@
     </p>
 
     <img src="Logo.png" alt="Bank Logo" width="32" height="32">
-    <a href="https://github.com/mf154290/N27-154290" target="_blank">BKB</a>
+    <a href="https://www.berufskolleg-borken.de/" target="_blank">BKB</a>
+    <hr> 
+
+    <table border="1">
+        <tr>
+            <td>Zeile1 Spalte1</td>
+            <td>Zeile1 Spalte2</td>
+        </tr>
+        <tr>
+            <td>Zeile2 Spalte1</td>
+            <td>Zeile2 Spalte2</td>
+        </tr>
+    </table>
+
+    <ul>
+        <li>Elemente in HTML</li>
+        <li>Wichtige HTML-Elemente</li>
+        <li>Gestalten mit CSS</li>
+      </ul>
+      
+      <ol>
+        <li>So funktioniert HTML</li>
+        <li>Wichtige HTML-Elemente</li>
+        <li>Gestalten mit CSS</li>
+     </ol>
+
+     
+      
+     
     <h1>Impressum</h1><footer>Persönliche-Angaben</footer>
     <p>mf154290@students.berufskolleg-borken.de</p>
     <p>Fabijan Misura</p>
