--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,71 +2,18 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>N27-Bank</title>
+    <title>N27</title>
 </head>
 <body>
-    <h1>Herzlich Wilkommen bei der N27 Bank</h1></header> 
-  <div>
-      Konto-Angaben
-  </div>
-
-    <p> 
-    <button type="button">Kontostand anzeigen</button>
-    </p>
-
-    <p> 
-    <button type="button">Einzahlen</button>
-    </p>
-
-    <p> 
-    <button type="button">Auszahlen</button>
-    </p>
-
-    <p> 
-    <button type="button">Überweisung</button>
-    </p>
-
-    <img src="Logo.png" alt="Bank Logo" width="32" height="32">
-    <a href="https://www.berufskolleg-borken.de/" target="_blank">BKB</a>
-    <hr> 
-
-    <table border="1">
-        <tr>
-            <td>Zeile1 Spalte1</td>
-            <td>Zeile1 Spalte2</td>
-        </tr>
-        <tr>
-            <td>Zeile2 Spalte1</td>
-            <td>Zeile2 Spalte2</td>
-        </tr>
-    </table>
-
-    <ul>
-        <li>Elemente in HTML</li>
-        <li>Wichtige HTML-Elemente</li>
-        <li>Gestalten mit CSS</li>
-      </ul>
-      
-      <ol>
-        <li>So funktioniert HTML</li>
-        <li>Wichtige HTML-Elemente</li>
-        <li>Gestalten mit CSS</li>
-     </ol>
-
-     
-      
-     
-    <h1>Impressum</h1><footer>Persönliche-Angaben</footer>
-    <p>mf154290@students.berufskolleg-borken.de</p>
-    <p>Fabijan Misura</p>
-    <p>NRW</p>
-    <p>DE 46130381294799928442</p>
-    <p>Einzelunternehmen</p>
-    <p>Kundenservice Tel: 493824814</p>
-    
+     <h1>Wilkommen</h1>
+     <nav>
+        <a href="/login">Logout</a>
+     </nav>
 
 </body>
 </html>
+
