--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,9 +11,9 @@
     <!--HTML-Formular-->
     <form method="post"> 
         <label for="fname">Benutzer-ID:</label><br>
-        <input type="number" id="idBenutzer"><br>
+        <input type="number" name="idBenutzer"><br>
         <label for="lname">Kennwort:</label><br>
-        <input type="password" id="Kennwort"><br><br>
+        <input type="password" name="Kennwort"><br><br>
         <button formaction="/login">Einloggen</button>
       </form> 
       
