--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
     <!--HTML-Formular-->
     <form method="post"> 
         <label for="fname">Benutzer-ID:</label><br>
-        <input type="number" name="idBenutzer"><br>
+        <input type="number" name="IdKunde"><br>
         <label for="lname">Kennwort:</label><br>
         <input type="password" name="Kennwort"><br><br>
         <button formaction="/login">Einloggen</button>
