--- a/Public/styles.css
+++ b/Public/styles.css
@@ -1,6 +1,6 @@
 .rahmen {
   max-width: 400px;
-  border: 4px solid darkgrey;
+  border: 4px solid rgb(119, 107, 107); 
   border-radius: 5px;      
   margin: 0 auto
 }
@@ -12,10 +12,10 @@
 
 .navigationsleiste {  
   font-family: Arial, Helvetica, sans-serif;    
-  background-color: rgb(119, 107, 107);        
+  background-color: rgb(119, 107, 107);    
+  color: rgb(119, 107, 107);
   font-size: 2vh;    
   text-align:center;  
-  color: white;      
   margin-bottom: 20px;
 }
 
@@ -54,7 +54,7 @@ input {
   padding: 14px 20px;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 2em;  
+  font-size: 3vh;  
 }
     
 label {
@@ -95,7 +95,7 @@ h1 {
   
 h2 {  
   color: #4CAF50;  
-  font-size: 6vw; 
+  font-size: 2vh; 
   font-family: Arial, Helvetica, sans-serif;
   text-align:center;
 }
@@ -110,5 +110,5 @@ a {
 p {
   color: red;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 3vw; 
+  font-size: 1.5vh; 
 }
