--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,12 +7,12 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>N27</title>
+    <title>N27 - Über uns</title>
 </head>
 <body>
     <div class="rahmen">
         <div class="kopf">
-            <h1>Willkommen bei der N27</h1>            
+            <h1>N27 - Über uns</h1>
         </div>
         <div class="navigationsleiste">            
             <a href="/">
@@ -26,7 +26,17 @@
             </a>   --
             <a href="/login"><i class="fa fa-sign-out fa-2x"></i></a>
         </div>
-        <div class="inhaltsbereich"></div>
+        <div class="inhaltsbereich">
+            <h2>Name</h2>
+            <p>N27 Bank AG</p>
+            <h2>Hauptsitz</h2>            
+            <p>Josefstraße 10</p>
+            <p>46325 Borken</p>
+            <p>Telefon: 02861 90990-0</p>
+            <p>Bankleitzahl: 27 000 000</p>
+            <h2>Geschäftsführung</h2>
+            <p>Stefan B.</p>
+        </div>
         <div class="fusszeile">
             &copy; 2022 GW21A
         </div>
