--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">    
@@ -13,7 +14,7 @@
                 <h1>N27 Bank</h1>
             </div>
             <div class="navigationsleiste">
-                 Bitte anmelden
+                <i class="fa fa-info-circle" aria-hidden="true"></i> | Bitte anmelden
             </div>
             <div class="inhaltsbereich">
                 <form method="post">
@@ -26,7 +27,7 @@
                 <p class="meldung"><%= meldung %></p>
             </div>
             <div class="fusszeile">
-                Footer
+                <i class="fa fa-copyright" aria-hidden="true"></i> GW21A 2022
             </div>
         </div>
     </body>
