--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,15 +16,17 @@
         </div>
         <div class="navigationsleiste">            
             <a href="/">
-                <i class="fa fa-home fa-2x" aria-hidden="true"></i>
+                <i class="fa fa-home fa-2x" aria-hidden="true" title="Willkommen"></i>
             </a> --
             <a href="/profile">
-                <i class="fa fa-user fa-2x" aria-hidden="true"></i>
+                <i class="fa fa-user fa-2x" aria-hidden="true" title="Mein Profil"></i>
             </a>   --
             <a href="/about">
-                <i class="fa fa-info fa-2x" aria-hidden="true"></i>
+                <i class="fa fa-info fa-2x" aria-hidden="true" title="Über uns"></i>
             </a>   --
-            <a href="/login"><i class="fa fa-sign-out fa-2x"></i></a>
+            <a href="/login">
+                <i class="fa fa-sign-out fa-2x" title="Abmelden"></i>
+            </a>
         </div>
         <div class="inhaltsbereich"></div>
         <div class="fusszeile">
