--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,9 @@
                 <h1>N27 Bank</h1>
             </div>
             <div class="navigationsleiste">
-                <i class="fa fa-info-circle" aria-hidden="true"></i> | Bitte anmelden
+                <a href="/login">
+                    <i class="fa fa-sign-in fa-2x" title="Anmelden"></i>
+                </a>
             </div>
             <div class="inhaltsbereich">
                 <form method="post">
@@ -24,7 +26,6 @@
                     <input type="password" name="Kennwort"><br><br>        
                     <button class="login" formaction="/login">Einloggen</button>
                 </form> 
-                <p class="meldung"><%= meldung %></p>
             </div>
             <div class="fusszeile">
                 <i class="fa fa-copyright" aria-hidden="true"></i> GW21A 2022
