--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,6 +24,9 @@
             <a href="/about">
                 <i class="fa fa-info fa-2x" aria-hidden="true" title="Über uns"></i>
             </a>   --
+            <a href="/support">
+                <i class="fa fa-question fa-2x" aria-hidden="true" title="Support"></i>
+            </a>   --
             <a href="/login">
                 <i class="fa fa-sign-out fa-2x" title="Abmelden"></i>
             </a>
