--- a/Public/styles.css
+++ b/Public/styles.css
@@ -7,7 +7,7 @@
 
 .kopf{
   padding: 5px;
-  background: #4CAF50;
+  background: red
 }
 
 .navigationsleiste {  
@@ -25,7 +25,7 @@
 
 .fusszeile{
   padding: 2px;
-  background: #4CAF50;
+  background: red;
   text-align: right;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5em;  
@@ -113,6 +113,11 @@ a {
   color: white;  
   text-decoration: none;
   }
+
+.schaltflaeche {  
+    color: red;  
+    text-decoration: none;
+    }
   
 p {
   color: red;
