--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,11 +24,23 @@
             <a href="/about">
                 <i class="fa fa-info fa-2x" aria-hidden="true" title="Über uns"></i>
             </a>   --
+            <a href="/support">
+                <i class="fa fa-question fa-2x" aria-hidden="true" title="Support"></i>
+            </a>   --
             <a href="/login">
                 <i class="fa fa-sign-out fa-2x" title="Abmelden"></i>
-            </a>
+            </a>   
         </div>
-        <div class="inhaltsbereich"></div>
+        <div class="inhaltsbereich">
+
+            <a class="schaltflaeche" href="/kontostandAnzeigen">kontostand anzeigen</a>
+                <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="Girokonto"></i>
+            </a>
+            <form>
+                <button formaction="/kontostandAnzeigen">Kontostand anzeigen</button>
+            </form>
+            
+        </div>
         <div class="fusszeile">
             &copy; 2022 GW21A
         </div>
