Kontostand anzeigen ausprogrammiert

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -27,6 +27,9 @@
             <a href="/support">
                 <i class="fa fa-question fa-2x" aria-hidden="true" title="Support"></i>
             </a>   --
+            <a href="/kredit">
+                <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="Kredit"></i>
+            </a>   --
             <a href="/login">
                 <i class="fa fa-sign-out fa-2x" title="Abmelden"></i>
             </a>
