--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,18 +27,27 @@
             <a href="/support">
                 <i class="fa fa-question fa-2x" aria-hidden="true" title="Support"></i>
             </a>   --
+            <a href="/kredit">
+                <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="Kredit"></i>
+            </a>   --
             <a href="/login">
                 <i class="fa fa-sign-out fa-2x" title="Abmelden"></i>
             </a>   
         </div>
         <div class="inhaltsbereich">
 
-            <a class="schaltflaeche" href="/kontostandAnzeigen">kontostand anzeigen</a>
-                <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="Girokonto"></i>
-            </a>
+        
             <form>
-                <button formaction="/kontostandAnzeigen">Kontostand anzeigen</button>
+                <button class="login" formaction="/kontostandAnzeigen">Kontostand anzeigen</button>
             </form>
+
+            
+            <form>
+                <button class="login" formaction="/kredit">Kreditrechner</button>
+            </form>
+
+
+
             
         </div>
         <div class="fusszeile">
