--- a/views/kredit.ejs
+++ b/views/kredit.ejs
@@ -7,12 +7,12 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>N27 - kontostand-anzeigen</title>
+    <title>N27 - Kredit</title>
 </head>
 <body>
     <div class="rahmen">
         <div class="kopf">
-            <h1>N27 - kontostand-anzeigen</h1>
+            <h1>N27 - Kredit</h1>
         </div>
         <div class="navigationsleiste">            
             <a href="/">
@@ -25,7 +25,7 @@
                 <i class="fa fa-info fa-2x" aria-hidden="true" title="Über uns"></i>
             </a>   --
             <a href="/support">
-                <i class="fa fa-question fa-2x" aria-hidden="true" title="Support"></i>
+                <i class="fa fa-question  fa-2x" aria-hidden="true" title="Support"></i>
             </a>   --
             <a href="/kredit">
                 <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="Kredit"></i>
@@ -36,15 +36,13 @@
         </div>
         <div class="inhaltsbereich">
             <form method="post">
-                <label>Kontoart:</label><br>
-                <input type="text" name="Kontoart" readonly value=<%= Kontoart %>  ><br>
-                <label>IBAN:</label><br>
-                <input type="text" name="IBAN" value=<%= IBAN %> readonly><br>        
-                <label>Kontostand:</label><br>
-                <input type="number" name="Kontostand" readonly value=<%= Kontostand %>  ><br>
-                
-                <button class="login" formaction="/profile">Änderung speichern</button>
-                
+                <label> Gewünschter Zinssatz:</label><br>
+                <input type="text" name="Zinssatz" value=<%= Zinssatz %>  ><br>
+                <label>Gewünschte Kreditlaufzeit:</label><br>
+                <input type="text" name="Kreditlaufzeit" value=<%= Kreditlaufzeit %> ><br>        
+                <label>Gewünschter Kreditbetrag:</label><br>
+                <input type="number" name="Betrag" value=<%= Betrag %>  ><br>
+                <button class="login" formaction="/kredit">Kredit berechnen</button>
             </form>   
             <p class="erfolgsmeldung"><%= Erfolgsmeldung %></p>  
         </div>
