--- a/views/support.ejs
+++ b/views/support.ejs
@@ -30,6 +30,9 @@
             <a href="/kredit">
                 <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="Kredit"></i>
             </a>   --
+            <a href="/Bonus">
+                <i class="fa fa-money fa-2x" aria-hidden="true" title="Bonus"></i>
+            </a>   --
             <a href="/login">
                 <i class="fa fa-sign-out fa-2x" title="Abmelden"></i>
             </a>
