--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                 <i class="fa fa-question fa-2x" aria-hidden="true" title="Support"></i>
             </a>   --
             <a href="/kredit">
-                <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="Kredit"></i>
+                <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="kredit"></i>
             </a>   --
             <a href="/Bonus">
                 <i class="fa fa-money fa-2x" aria-hidden="true" title="Bonus"></i>
@@ -44,9 +44,13 @@
                 <button class="login" formaction="/kontostandAnzeigen">Kontostand anzeigen</button>
             </form>
 
+            <form>
+                <button class="login" formaction="/Kontoanlegen">Konto anlegen</button>
+            </form>
+
             
             <form>
-                <button class="login" formaction="/kredit">Kreditrechner</button>
+                <button class="login" formaction="/kreditBerechnen">Kredit berechnen</button>
             </form>
 
 
@@ -59,3 +63,4 @@
     </div>
 </body>
 </html>
+
