--- a/Public/styles.css
+++ b/Public/styles.css
@@ -7,7 +7,7 @@
 
 .kopf{
   padding: 5px;
-  background: red
+  background: #4CAF50;
 }
 
 .navigationsleiste {  
@@ -21,11 +21,12 @@
 
 .inhaltsbereich{
   min-height: 470px;
+  color: #4CAF50;
 }
 
 .fusszeile{
   padding: 2px;
-  background: red;
+  background: #4CAF50;
   text-align: right;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5em;  
@@ -43,7 +44,19 @@ input {
   box-sizing: border-box;
   font-size: 2.5vh;
 }
-  
+ 
+select {  
+  width: 80%;
+  margin-bottom: 10px;
+  margin-right: 10%;
+  margin-left: 10%;  
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 2.5vh;
+}
+
 .login {
   width: 80%;
   margin-bottom: 10px;
@@ -112,12 +125,12 @@ h2 {
 a {  
   color: white;  
   text-decoration: none;
-  }
+}
 
 .schaltflaeche {  
-    color: red;  
-    text-decoration: none;
-    }
+  color: blue;  
+  text-decoration: none;
+}
   
 p {
   color: red;
