--- a/views/KontostandAnzeigen.ejs
+++ b/views/KontostandAnzeigen.ejs
@@ -7,12 +7,12 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>N27 - kontostand-anzeigen</title>
+    <title>N27 - Kontostand anzeigen</title>
 </head>
 <body>
     <div class="rahmen">
         <div class="kopf">
-            <h1>N27 - kontostand-anzeigen</h1>
+            <h1>N27 - Kontostand anzeigen</h1>
         </div>
         <div class="navigationsleiste">            
             <a href="/">
@@ -25,13 +25,7 @@
                 <i class="fa fa-info fa-2x" aria-hidden="true" title="Über uns"></i>
             </a>   --
             <a href="/support">
-                <i class="fa fa-question fa-2x" aria-hidden="true" title="Support"></i>
-            </a>   --
-            <a href="/kredit">
-                <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="Kredit"></i>
-            </a>   --
-            <a href="/Bonus">
-                <i class="fa fa-money fa-2x" aria-hidden="true" title="Bonus"></i>
+                <i class="fa fa-phone-square fa-2x" aria-hidden="true" title="Über uns"></i>
             </a>   --
             <a href="/login">
                 <i class="fa fa-sign-out fa-2x" title="Abmelden"></i>
@@ -39,17 +33,24 @@
         </div>
         <div class="inhaltsbereich">
             <form method="post">
+                <select id="kontoArt" name="kontoArt">
+                    <!-- Die for-Schleife sorgt dafür, dass das Dropdown-Menü alle Konten zur Auswahl anzeigt.
+                    Bei 5 Konten wird die Schleife 5x durchlaufen. 
+                    MeineIbans ist die Liste, die beim Rendern an den Browser übergeben wird.
+                    Die Eigenschaft length gibt die Anzahl der Elemente in der Liste zurück.
+                    Mit eckigen Klammern hinter MeineIbans kann ein einzelnes Element der Liste ausgewählt werden.
+                    Mit .iban wird die Eigenschaft Iban ausgelesen.
+                    -->
+                    <% for (var i=0; i < MeineIbans.length; i++){ %>
+                        <option value="<%= MeineIbans[i].iban %>"><%= MeineIbans[i].iban %></option>
+                    <% } %>
+                </select>
                 <label>Kontoart:</label><br>
-                <input type="text" name="Kontoart" readonly value=<%= Kontoart %>  ><br>
-                <label>IBAN:</label><br>
-                <input type="text" name="IBAN" value=<%= IBAN %> readonly><br>        
+                <input type="text" name="Kontoart" readonly value=<%= MeineIbans[0].kontoart %>  ><br>
                 <label>Kontostand:</label><br>
-                <input type="number" name="Kontostand" readonly value=<%= Kontostand %>  ><br>
-                
-                <button class="login" formaction="/profile">Änderung speichern</button>
-                
+                <input type="number" name="Kontostand" readonly value=<%= MeineIbans[0].anfangssaldo %>  ><br>
             </form>   
-            <p class="erfolgsmeldung"><%= Erfolgsmeldung %></p>  
+            <p class="erfolgsmeldung"><%= Erfolgsmeldung %></p>
         </div>
         <div class="fusszeile">
             &copy; 2022 GW21A
