--- a/views/kontoanlegen.ejs
+++ b/views/kontoanlegen.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +7,12 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>N27 - Kredit</title>
+    <title>N27 - Konto anlegen</title>
 </head>
 <body>
     <div class="rahmen">
         <div class="kopf">
-            <h1>N27 - Kredit</h1>
+            <h1>N27 - Konto anlegen</h1>
         </div>
         <div class="navigationsleiste">            
             <a href="/">
@@ -25,13 +25,7 @@
                 <i class="fa fa-info fa-2x" aria-hidden="true" title="Über uns"></i>
             </a>   --
             <a href="/support">
-                <i class="fa fa-question  fa-2x" aria-hidden="true" title="Support"></i>
-            </a>   --
-            <a href="/kredit">
-                <i class="fa fa-credit-card-alt fa-2x" aria-hidden="true" title="kredit"></i>
-            </a>   --
-            <a href="/Bonus">
-                <i class="fa fa-money fa-2x" aria-hidden="true" title="Bonus"></i>
+                <i class="fa fa-phone-square fa-2x" aria-hidden="true" title="Über uns"></i>
             </a>   --
             <a href="/login">
                 <i class="fa fa-sign-out fa-2x" title="Abmelden"></i>
@@ -39,18 +33,17 @@
         </div>
         <div class="inhaltsbereich">
             <form method="post">
-                <label> Gewünschter Zinssatz:</label><br>
-                <input type="text" name="Zinssatz" value=<%= Zinssatz %>  ><br>
-                <label>Gewünschte Kreditlaufzeit:</label><br>
-                <input type="text" name="Laufzeit" value=<%= Laufzeit %> ><br>        
-                <label>Gewünschter Kreditbetrag:</label><br>
-                <input type="number" name="Betrag" value=<%= Betrag %>  ><br>
-                <button class="login" formaction="/kredit">Kredit</button>
-            </form>   
-            <p class="erfolgsmeldung"><%= Erfolgsmeldung %></p>  
+                <label for="kontoArt">Kontoart wählen:</label><br>
+                <select id="kontoArt" name="kontoArt">
+                    <option value="girokonto">Girokonto</option>
+                    <option value="sparkonto">Sparkonto</option>                
+                </select>
+                <button class="login" formaction="/kontoAnlegen">Neues Konto anlegen</button>
+            </form>
+            <p class="erfolg"> <%= Erfolgsmeldung %></p>
         </div>
         <div class="fusszeile">
-            &copy; 2022 GW21A
+            &copy; 2023 GW21A
         </div>
     </div>
 </body>
