--- a/views/kreditBerechnen.ejs
+++ b/views/kreditBerechnen.ejs
@@ -7,12 +7,12 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>N27 - Kredit</title>
+    <title>N27 - Kredit berechnen</title>
 </head>
 <body>
     <div class="rahmen">
         <div class="kopf">
-            <h1>N27 - Kredit</h1>
+            <h1>N27 - Kredit berechnen</h1>
         </div>
         <div class="navigationsleiste">            
             <a href="/">
@@ -45,7 +45,7 @@
                 <input type="text" name="Laufzeit" value=<%= Laufzeit %> ><br>        
                 <label>Gewünschter Kreditbetrag:</label><br>
                 <input type="number" name="Betrag" value=<%= Betrag %>  ><br>
-                <button class="login" formaction="/kredit">Kredit</button>
+                <button class="login" formaction="/kreditBerechnen">Kredit berechnen</button>
             </form>   
             <p class="erfolgsmeldung"><%= Erfolgsmeldung %></p>  
         </div>
